# floppshop-v2

./: .gitignore  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml
backend/: main.py  pyproject.toml
backend/config/: .env.template
backend/docker/postgres/: init-postgres.sql
backend/docker/python/: Dockerfile
backend/gateway/: Makefile  main.py  pyproject.toml
backend/gateway/config/: .env.template
backend/gateway/docker/python/: Dockerfile
backend/gateway/src/apps/product/: router.py  schemas.py  services.py
backend/gateway/src/apps/user/: router.py  schemas.py  services.py
backend/gateway/src/settings/: __init__.py  api_urls.py  general.py  hosts.py
backend/gateway/src/utils/: http.py  services.py
backend/gateway/tests/: conftest.py
backend/migrations/models/: 0_20211109215752_init.sql
backend/migrations/users/: 0_20211109222230_init.sql
backend/orders/: Makefile  main.py  pyproject.toml
backend/orders/config/: .env.template
backend/orders/scripts/: start.sh
backend/orders/tests/: conftest.py
backend/products/: Makefile  main.py  pyproject.toml
backend/products/config/: .env.template
backend/scripts/: start.sh  test.sh
backend/templates/: email_confirmation.html
backend/users/: Makefile  aerich.ini  main.py  pyproject.toml
config/: .env.template
frontend/: Dockerfile  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx
specs/: general.md  user.md
terraform/: alb.tf  ecs.tf  network.tf  provider.tf  roles.tf  security.tf  variables.tf
(+98 files in other folders)
